feat: Implemneted nginx config

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -55,9 +55,9 @@ http {
     listen 443 ssl http2;
     server_name _;  # Acepta cualquier nombre de dominio
 
-    # Certificados SSL (opcionales - solo si existen)
-    ssl_certificate     /etc/letsencrypt/live/TU_DOMINIO.COM/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/TU_DOMINIO.COM/privkey.pem;
+    # Certificados SSL (auto-firmados o generados)
+    ssl_certificate     /etc/nginx/ssl/certificate.crt;  # Ruta al certificado auto-firmado
+    ssl_certificate_key /etc/nginx/ssl/private.key;      # Ruta a la clave privada auto-firmada
 
     # Configuración SSL
     ssl_protocols TLSv1.2 TLSv1.3;
