fix: Fixed error with certification nginx

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -57,7 +57,7 @@ http {
 
     # Certificados SSL (auto-firmados o generados)
     ssl_certificate     /etc/nginx/ssl/certificate.crt;  # Ruta al certificado auto-firmado
-    ssl_certificate_key /etc/nginx/ssl/private_no_passphrase.key;auto-firmada
+    ssl_certificate_key /etc/nginx/ssl/private_no_passphrase.key;  # Ruta a la clave privada sin passphrase
 
     # Configuración SSL
     ssl_protocols TLSv1.2 TLSv1.3;
