fix: Fixed nginx

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,10 +18,13 @@ http {
     ''      close;
   }
 
-  # HTTP Server (Funciona tanto en desarrollo como producción)
+  # HTTP Server (Redirige a HTTPS)
   server {
     listen 80;
     server_name _;  # Acepta cualquier nombre de dominio
+
+    # Redirigir todo el tráfico HTTP a HTTPS
+    return 301 https://$host$request_uri;
 
     # Para certificados SSL (producción)
     location /.well-known/acme-challenge/ {
