--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,14 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db  # Asegura que la base de datos se inicie antes de la API
+      - db
     healthcheck:
       test: ["CMD", "curl", "-fsS", "http://localhost:8000/health"]
       interval: 15s
       timeout: 3s
       retries: 5
-
+    volumes:
+      - ./app:/app  # Montar el directorio local de la app al contenedor
   nginx:
     image: nginx:1.27-alpine
     depends_on:
@@ -25,7 +26,7 @@ services:
       - "443:443"
     volumes:
       - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro  # Monta el directorio de certificados SSL
+      - ./nginx/ssl:/etc/nginx/ssl:ro
     restart: always
 
   certbot:
